--- a/src/main/resources/properties/environment/test/environment.properties
+++ b/src/main/resources/properties/environment/test/environment.properties
@@ -1,1 +1,10 @@
-web-application.main-page-url=https://vividus-test-site.herokuapp.com
+web-application.main-page-url=https://trello.com
+
+rest-api.http.endpoint=https://api.trello.com/
+http.ssl.check-certificate=false
+http.ssl.verify-hostname=false
+
+bdd.configuration.composite-paths=steps/*.steps 
+
+bdd.variables.global.userEmail=natallia.dudko@gmail.com
+bdd.variables.global.userpassword=12345678
